apps/sample-laravel/base/svc.yaml

   
apiVersion: v1
kind: Service
metadata:
  name: sample-laravel-svc
spec:
  selector:
    app: sample-laravel-app
  ports:
    - port: 8080
